# p

./: CMakeLists.txt  README.html  README.md  namani  prtisndanm.sh
docs/: index.html  अनुक्रमणिका.html
emscripten/: Makefile  पर्वयन्त्रम्.html  पर्वयन्त्रम्.js  पर्वयन्त्रम्.wasm
priksnm/: priksnm.c
prvyntrm/: prvyntrm.c  prvyntrm.h
yugyntrm/: CMakeLists.txt  dvyastktntrm.c  dvyastktntrm.h  yugyntrm.c  yugyntrm.h
परि॑क्षिप्तम्/emscripten/: Makefile
पर्वयन्त्रम्/: पर्वयन्त्रम्.c  पर्वयन्त्रम्.h
